etl/log_collector/sub_zipkin_logs/k8s-services.yaml
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: kafka
#  labels:
#    app: kafka
#spec:
#  type: NodePort
#  ports:
#    - port: 9092
#    - port: 2181
#  selector:
#    app: kafka
#
#---
#apiVersion: extensions/v1beta1
#kind: Deployment
#metadata:
#  name: kafka
#spec:
#  replicas: 1
#  template:
#    metadata:
#      labels:
#        app: kafka
#        version: v1
#    spec:
#      containers:
#      - name: kafka
#        image: spotify/kafka:latest
#        imagePullPolicy: IfNotPresent
#        ports:
#        - containerPort: 9092
#        - containerPort: 2181

---
apiVersion: v1
kind: Service
metadata:
  name: rest-service-zipkin
  labels:
    app: rest-service-zipkin
spec:
  type: NodePort
  ports:
    - port: 9411
  selector:
    app: rest-service-zipkin

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rest-service-zipkin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-service-zipkin
        version: v1
    spec:
      containers:
      - name: rest-service-zipkin
        image: openzipkin/zipkin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411

---
apiVersion: v1
kind: Service
metadata:
  name: rest-service-1
  labels:
    app: rest-service-1
spec:
  type: NodePort
  ports:
    - port: 16005
  selector:
    app: rest-service-1

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rest-service-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-service-1
        version: v1
    spec:
      containers:
      - name: rest-service-1
        image: liuzozo/rest-service-1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 16005

---

apiVersion: v1
kind: Service
metadata:
  name: rest-service-collect
  labels:
    app: rest-service-collect
spec:
  type: NodePort
  ports:
    - port: 9413
  selector:
    app: rest-service-collect
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rest-service-collect
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-service-collect
        version: v1
    spec:
      containers:
      - name: rest-service-collect
        image: liuzozo/rest-service-collect
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9413
        volumeMounts:
        - name: collect
          subPath: /
          mountPath: /home/parquet
      volumes:
      - name: collect
        hostPath:
          path: /home/parquet

---
apiVersion: v1
kind: Service
metadata:
  name: rest-service-end
  labels:
    app: rest-service-end
spec:
  type: NodePort
  ports:
    - port: 16006
  selector:
    app: rest-service-end

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rest-service-end
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-service-end
        version: v1
    spec:
      containers:
      - name: rest-service-end
        image: liuzozo/rest-service-end
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 16006
